# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.2
#

2005-05-14 19:31:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-8

    Summary:
      update to the last itools/iHotfix (itools.gettext.domains)
    Revision:
      Localizer--main--1.2--patch-8


    modified files:
     Changelog Gettext.py LanguageManager.py LocalContent.py
     LocalFiles.py LocalFolder.py LocalPropertyManager.py
     Localizer.py LocalizerSupport.py MessageCatalog.py


2005-05-08 17:50:36 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-7

    Summary:
      fix import of the PO handler (itools 0.9)
    Revision:
      Localizer--main--1.2--patch-7


    modified files:
     Changelog MessageCatalog.py


2005-05-08 17:45:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-6

    Summary:
      merge fixes from the 1.1 branch
    Revision:
      Localizer--main--1.2--patch-6

    Patches applied:
    
     * jdavid@itaapy.com--public/Localizer--main--1.1--patch-31
       fix "LPM.get_available_languages" when property is empty
    
     * jdavid@itaapy.com--public/Localizer--main--1.1--patch-32
       backwards compatibility patches by Yoshinori Okuji
    

    modified files:
     Changelog LanguageManager.py LocalPropertyManager.py
     MessageCatalog.py

    new patches:
     jdavid@itaapy.com--public/Localizer--main--1.1--patch-31
     jdavid@itaapy.com--public/Localizer--main--1.1--patch-32


2005-04-19 10:38:55 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-5

    Summary:
      fix the changelog
    Revision:
      Localizer--main--1.2--patch-5


    new files:
     .arch-ids/Changelog.id Changelog

    removed files:
     .arch-ids/Changelog.id Changelog


2005-04-12 18:37:19 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-4

    Summary:
      improve message catalog interface
    Revision:
      Localizer--main--1.2--patch-4

    Use fieldsets to define the layout. Use a simple paragraph instead of